--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/np-front.png" />
+  <link rel="icon" type="image/svg+xml" href="public/np-front.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   
