--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="public/np-front.png" />
+  <link rel="icon" type="image/svg+xml" href="/np-front.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   
@@ -12,7 +12,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/personal_portfolio/client/src/main.jsx"></script>
+  <script type="module" src="/src/main.jsx"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
